# a-curl-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
.changes/: 0.0.1.md
examples/http_get/: CMakeLists.txt  build.sh
examples/http_get/data/: popular_urls.txt
examples/http_get/src/: basic_get.c  fetch_list.c
examples/openai/: CMakeLists.txt
examples/openai/responses/01_basic_text/: CMakeLists.txt  README.md  build.sh
examples/openai/responses/01_basic_text/src/: basic_text.c  basic_text_cache_miss.c  basic_text_chain.c  basic_text_error.c  basic_text_instructions.c  basic_text_logprobs.c  basic_text_max_tokens.c  basic_text_parallel.c  basic_text_temperature_sweep.c
examples/openai/responses/02_structured_output/: CMakeLists.txt  README.md  build.sh
examples/openai/responses/02_structured_output/src/: structured_array.c  structured_calendar_event.c  structured_chain_generate_then_expand.c  structured_chain_parallel_followup.c  structured_chain_single_followup.c  structured_contact_form.c  structured_invoice_line_items.c  structured_moderation_report.c  structured_nested.c  structured_options_with_null.c  structured_search_query.c  structured_single_object.c  structured_streaming_entities.c  structured_ui_tree.c  structured_validation_error.c  structured_validation_showcase.c
examples/openai/src/: embed_test.c  responses.c
gcloud/include/outputs/gcloud/: embed.h  pubsub.h
gcloud/include/plugins/gcloud/: cloudsql_query.h  gcs_download.h  google_custom_search.h  google_embed.h  google_vision.h  pubsub_pull.h  spanner_query.h  spanner_session.h  token.h
gcloud/src/gcloud/: embed.c  pubsub.c
gcloud/src/plugins/gcloud/: cloudsql_query.c  gcs_download.c  google_custom_search.c  google_embed.c  google_vision.c  pubsub_pull.c  spanner_query.c  spanner_session.c  token.c
include/a-curl-library/: curl_event_loop.h  curl_event_request.h  curl_output.h  curl_resource.h  event_state.h  rate_manager.h  worker_pool.h
include/a-curl-library/impl/: curl_event_priv.h
include/a-curl-library/outputs/: embed.h  file.h  memory.h  openai_chat.h  openai_responses.h  pubsub.h
include/a-curl-library/outputs/openai/: chat.h  embed.h  responses.h
include/a-curl-library/outputs/openai/v1/: embeddings.h  responses.h
include/a-curl-library/outputs/openai/v1/chat/: completions.h
include/a-curl-library/parsers/openai/v1/: responses_output.h
include/a-curl-library/plugins/: cloudsql_query.h  gcloud_token.h  gcs_download.h  google_custom_search.h  google_embed.h  google_vision.h  openai_chat.h  openai_embed.h  openai_responses.h  pubsub_pull.h  spanner_query.h  spanner_session.h
include/a-curl-library/plugins/openai/: chat.h  embed.h  responses.h
include/a-curl-library/plugins/openai/v1/: embeddings.h  responses.h  responses_delete.h  responses_get.h  responses_input_items.h
include/a-curl-library/plugins/openai/v1/chat/: completions.h
include/a-curl-library/sinks/: file.h  memory.h
include/a-curl-library/sinks/openai/v1/: embeddings.h  responses.h  responses_stream.h
include/a-curl-library/sinks/openai/v1/chat/: completions.h
src/: curl_event_loop.c  curl_event_request.c  curl_output.c  curl_resource.c  rate_manager.c  worker_pool.c
src/outputs/: embed.c  file.c  memory.c  openai_chat.c  openai_responses.c  pubsub.c
src/outputs/openai/: chat.c  embed.c  responses.c
src/outputs/openai/v1/: embeddings.c  responses.c
src/outputs/openai/v1/chat/: completions.c
src/parsers/openai/v1/: responses_output.c
src/plugins/: cloudsql_query.c  gcloud_token.c  gcs_download.c  google_custom_search.c  google_embed.c  google_vision.c  openai_chat.c  openai_embed.c  openai_responses.c  pubsub_pull.c  spanner_query.c  spanner_session.c
src/plugins/openai/: chat.c  embed.c  responses.c
src/plugins/openai/v1/: embeddings.c  responses.c  responses_admin.c  responses_ext.c
src/plugins/openai/v1/chat/: completions.c
src/sinks/: file.c  memory.c
src/sinks/openai/v1/: embeddings.c  responses.c  responses_stream.c
src/sinks/openai/v1/chat/: completions.c
tests/: CMakeLists.txt  build.sh
tests/src/: gcs_downloader.c  test_curl_event_loop.c  test_curl_resource.c  test_curl_resource_async.c  test_event_loop_cancel.c  test_event_loop_priority.c  test_google_embed.c  test_openai_chat.c  test_openai_embed.c  test_openai_responses.c  test_rate_manager.c  test_rate_manager_hp_429.c  test_request_headers.c  test_request_json.c  test_sinks.c  test_worker_pool.c
